--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&amp;display=swap"
         rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="icon/fontawesome/fontawesome/css/all.min.css">
 </head>
 
@@ -116,19 +116,295 @@
         <div class="container">
             <div class="filter_controls">
                 <ul>
-                    <li>
-                        <a href="#">Best Sellers</a>
+                    <li class="active" data-list_product=".best-sale">
+                        Best Sellers
                     </li>
-                    <li>
-                        <a href="#">New Arrivals</a>
+                    <li class="" data-list_product=".new-arri">
+                        New Arrivals
                     </li>
-                    <li>
-                        <a href="#">Hot Sales</a>
+                    <li class="" data-list_product=".hot-sale">
+                        Hot Sales
                     </li>
                 </ul>
             </div>
-            <div class="product_item">
-
+            <div class="best-sale">
+                <div class="product_list ">
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-3.jpg" alt="">
+                        <div class="tag sale">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-2.jpg" alt="">
+                        <div class="tag sale">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-3.jpg" alt="">
+                        <div class="tag">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                </div>
+            </div> 
+            <div class="new-arri">
+                <div class="product_list">
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-3.jpg" alt="">
+                        <div class="tag sale">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                </div>
+            </div>     
+            <div class="hot-sale">
+                <div class="product_list">
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-3.jpg" alt="">
+                        <div class="tag sale">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                    <div class="product_item">
+                        <img src="/img/product/product-1.jpg" alt="">
+                        <div class="tag new">                     
+                        </div> 
+                        <h6><a href="">Piqué Biker Jacket</a></h6>
+                        <div class="rate">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>$67.24</p>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>
+    <div class="categories">
+        <div class="container">
+            <div class="flex_row">
+                <div class="categories-text">
+                    <span>Clothings Hot</span>
+                    <span class="active">Shoe Collection</span>
+                    <span>Accessories</span>
+                </div>
+                <div class="img_product--sale">
+                    <img src="/img/product/product-sale.png" alt="product sale">
+                    <div class="price-sale">
+                        <p>Sale Of</p>
+                        <span>$29.99</span>
+                    </div>
+                </div>
+                <div class="categories_time-cowndown">
+                    <p>deal of the week</p>
+                    <h3>Multi-pocket Chest Bag Black</h3>
+                    <div class="time-cowndown flex_row">
+                        <div class="time_item">
+                            <span>30</span>
+                            <h5>Days</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>11</span>
+                            <h5>Hours</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>45</span>
+                            <h5>Minutes</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>11</span>
+                            <h5>Seconds</h5>
+                        </div>
+                    </div>
+                    <div class="btn--shop-now">
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
