--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="best-sale">
                 <div class="product_list ">
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -144,7 +144,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -158,7 +158,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-3.jpg" alt="">
+                        <img src="./img/product/product-3.jpg" alt="">
                         <div class="tag sale">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -172,7 +172,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -186,7 +186,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-2.jpg" alt="">
+                        <img src="./img/product/product-2.jpg" alt="">
                         <div class="tag sale">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -200,7 +200,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -214,7 +214,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-3.jpg" alt="">
+                        <img src="./img/product/product-3.jpg" alt="">
                         <div class="tag">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -228,7 +228,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -246,7 +246,7 @@
             <div class="new-arri">
                 <div class="product_list">
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -260,7 +260,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -274,7 +274,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-3.jpg" alt="">
+                        <img src="./img/product/product-3.jpg" alt="">
                         <div class="tag sale">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -288,7 +288,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -306,7 +306,7 @@
             <div class="hot-sale">
                 <div class="product_list">
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -320,7 +320,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -334,7 +334,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-3.jpg" alt="">
+                        <img src="./img/product/product-3.jpg" alt="">
                         <div class="tag sale">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -348,7 +348,7 @@
                         <p>$67.24</p>
                     </div>
                     <div class="product_item">
-                        <img src="/img/product/product-1.jpg" alt="">
+                        <img src="./img/product/product-1.jpg" alt="">
                         <div class="tag new">                     
                         </div> 
                         <h6><a href="">Piqué Biker Jacket</a></h6>
@@ -374,7 +374,7 @@
                     <span>Accessories</span>
                 </div>
                 <div class="img_product--sale">
-                    <img src="/img/product/product-sale.png" alt="product sale">
+                    <img src="./img/product/product-sale.png" alt="product sale">
                     <div class="price-sale">
                         <p>Sale Of</p>
                         <span>$29.99</span>
