--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -182,7 +182,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -219,7 +219,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -256,7 +256,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -293,7 +293,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -330,7 +330,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -367,7 +367,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -404,7 +404,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -445,7 +445,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -482,7 +482,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -519,7 +519,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -556,7 +556,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -597,7 +597,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -634,7 +634,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -671,7 +671,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -708,7 +708,7 @@
                         <div class="product_text">
                             <a href="" class="add-cart">+ Add To Cart</a>
                             <h6><a href="">Piqué Biker Jacket</a></h6>
-                        </div> 
+                        </div>
                         <div class="rate">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
@@ -771,6 +771,58 @@
                         </div>
                         <div class="btn--shop-now">
                             <a href="">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="instagram flex_row">
+                <div class="instagram_img flex_row">
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+                </div>
+                <div class="instagram_content">
+                    <h2>instagram</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. </p>
+                    <h3>#Male_Fashion</h3>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="latest--new">
+                <div class="latest--new-title">
+                    <h6>Latest News</h6>
+                    <h2>Fashion New Trends</h2>
+                </div>
+                <div class="blog flex_row">
+                    <div class="blog_item">
+                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                        <div class="blog_content">
+                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                            <h5>What Curling Irons Are The Best Ones</h5>
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog_item">
+                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                        <div class="blog_content">
+                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                            <h5>What Curling Irons Are The Best Ones</h5>
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog_item">
+                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                        <div class="blog_content">
+                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                            <h5>What Curling Irons Are The Best Ones</h5>
+                            <a href="">Read More</a>
                         </div>
                     </div>
                 </div>
