--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&amp;display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Fashion</title>
+    <link rel="icon" href="img/icon/heart.png" >
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="icon/fontawesome/fontawesome/css/all.min.css">
 </head>
@@ -63,6 +63,12 @@
         </div>
     </div>
     <div class="bg_content" style="background-image: url(img/hero/hero-1.jpg);">
+        <div class="arow_left">
+            <i class="fa-solid fa-arrow-left-long"></i>
+        </div>
+        <div class="arow_right">
+            <i class="fa-solid fa-arrow-right-long"></i>
+        </div>
         <div class="container">
             <div class="content">
                 <div class="shop_buy ">
@@ -74,7 +80,12 @@
                         <a href="#">Shop now</a>
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </div>
-                    <div class="icon_social"></div>
+                    <div class="icon_social">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -733,106 +744,147 @@
             </div>
             <!-- hot-sale  new-arri -->
         </div>
-        <div class="categories">
-            <div class="container">
-                <div class="flex_row">
-                    <div class="categories-text">
-                        <span>Clothings Hot</span>
-                        <span class="active">Shoe Collection</span>
-                        <span>Accessories</span>
-                    </div>
-                    <div class="img_product--sale">
-                        <img src="img/product/product-sale.png" alt="product sale">
-                        <div class="price-sale">
-                            <p>Sale Of</p>
-                            <span>$29.99</span>
-                        </div>
-                    </div>
-                    <div class="categories_time-cowndown">
-                        <p>deal of the week</p>
-                        <h3>Multi-pocket Chest Bag Black</h3>
-                        <div class="time-cowndown flex_row">
-                            <div class="time_item">
-                                <span>30</span>
-                                <h5>Days</h5>
-                            </div>
-                            <div class="time_item">
-                                <span>11</span>
-                                <h5>Hours</h5>
-                            </div>
-                            <div class="time_item">
-                                <span>45</span>
-                                <h5>Minutes</h5>
-                            </div>
-                            <div class="time_item">
-                                <span>11</span>
-                                <h5>Seconds</h5>
-                            </div>
-                        </div>
-                        <div class="btn--shop-now">
-                            <a href="">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
+    <div class="categories">
         <div class="container">
-            <div class="instagram flex_row">
-                <div class="instagram_img flex_row">
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
-                    <div class="instagram__img__item" style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+            <div class="flex_row">
+                <div class="categories-text">
+                    <span>Clothings Hot</span>
+                    <span class="active">Shoe Collection</span>
+                    <span>Accessories</span>
                 </div>
-                <div class="instagram_content">
-                    <h2>instagram</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. </p>
-                    <h3>#Male_Fashion</h3>
+                <div class="img_product--sale">
+                    <img src="img/product/product-sale.png" alt="product sale">
+                    <div class="price-sale">
+                        <p>Sale Of</p>
+                        <span>$29.99</span>
+                    </div>
+                </div>
+                <div class="categories_time-cowndown">
+                    <p>deal of the week</p>
+                    <h3>Multi-pocket Chest Bag Black</h3>
+                    <div class="time-cowndown flex_row">
+                        <div class="time_item">
+                            <span>30</span>
+                            <h5>Days</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>11</span>
+                            <h5>Hours</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>45</span>
+                            <h5>Minutes</h5>
+                        </div>
+                        <div class="time_item">
+                            <span>11</span>
+                            <h5>Seconds</h5>
+                        </div>
+                    </div>
+                    <div class="btn--shop-now">
+                        <a href="">Shop Now</a>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
+        <div class="instagram flex_row">
+            <div class="instagram_img flex_row">
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-1.jpg&quot;);"></div>
+                <div class="instagram__img__item"
+                    style="background-image: url(&quot;img/instargram/instagram-2.jpg&quot;);"></div>
+            </div>
+            <div class="instagram_content">
+                <h2>instagram</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. </p>
+                <h3>#Male_Fashion</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="latest--new">
+            <div class="latest--new-title">
+                <h6>Latest News</h6>
+                <h2>Fashion New Trends</h2>
+            </div>
+            <div class="blog flex_row">
+                <div class="blog_item">
+                    <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                    <div class="blog_content">
+                        <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                        <h5>What Curling Irons Are The Best Ones</h5>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="blog_item">
+                    <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                    <div class="blog_content">
+                        <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                        <h5>What Curling Irons Are The Best Ones</h5>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="blog_item">
+                    <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
+                    <div class="blog_content">
+                        <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
+                        <h5>What Curling Irons Are The Best Ones</h5>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
         <div class="container">
-            <div class="latest--new">
-                <div class="latest--new-title">
-                    <h6>Latest News</h6>
-                    <h2>Fashion New Trends</h2>
+            <div class="flex_row">
+                <div class="footer__about">
+                    <a href="#"><img src="img/logo/footer-logo.png" alt=""></a>
+                    <p>The customer is at the heart of our unique business model, which includes design.
+                    </p>
+                    <a href="#"><img src="img/payment/payment.png" alt=""></a>
                 </div>
-                <div class="blog flex_row">
-                    <div class="blog_item">
-                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
-                        <div class="blog_content">
-                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
-                            <h5>What Curling Irons Are The Best Ones</h5>
-                            <a href="">Read More</a>
+                <div class="footer__widget">
+                    <h2>Shopping</h2>
+                    <a href="">Clothing Store</a>
+                    <a href="">Trending Shoes</a>
+                    <a href="">Accessories</a>
+                    <a href="">Sale</a>
+                </div>
+                <div class="footer__widget">
+                    <h2>Shopping</h2>
+                    <a href="">Contact Us</a>
+                    <a href="">Payment Methods</a>
+                    <a href="">Delivary</a>
+                    <a href="">Return & Exchanges</a>
+                </div>
+                <div class="footer_gmail">
+                    <h2>NEWLETTER</h2>
+                    <p>Be the first to know about new arrivals, look books, sales & promos!</p>
+                    <form action="#">
+                        <div class="form_submit">
+                            <input type="text" placeholder="Your email">
+                            <button type="submit"><i class="fa-regular fa-envelope"></i></button>
                         </div>
-                    </div>
-                    <div class="blog_item">
-                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
-                        <div class="blog_content">
-                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
-                            <h5>What Curling Irons Are The Best Ones</h5>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="blog_item">
-                        <div class="blog_bg" style="background-image: url(&quot;img/blog/blog-1.jpg&quot;);"></div>
-                        <div class="blog_content">
-                            <span><img src="img/blog/calendar.png" alt=""> 13 May 2024</span>
-                            <h5>What Curling Irons Are The Best Ones</h5>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            <div class="container">
-
+            <div class="footer__copyright">
+                <P>Copyright © 20242020 All rights reserved | This template is made with <i class="fa-regular fa-heart"></i> by <a href="#">Colorlib</a></P>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
