--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     </div>
     <div class="bg_content" style="background-image: url(img/hero/hero-1.jpg);">
         <div class="arow_left">
-            <i class="fa-solid fa-arrow-left-long"></i>
+            <button><i class="fa-solid fa-arrow-left-long"></i></button>
         </div>
         <div class="arow_right">
-            <i class="fa-solid fa-arrow-right-long"></i>
+           <button><i class="fa-solid fa-arrow-right-long"></i></button> 
         </div>
         <div class="container">
             <div class="content">
@@ -81,10 +81,10 @@
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </div>
                     <div class="icon_social">
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-pinterest"></i>
-                        <i class="fa-brands fa-instagram"></i>
+                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-pinterest"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
