--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     </div>
     <div class="bg_content" style="background-image: url(img/hero/hero-1.jpg);">
         <div class="arow_left">
-            <button><i class="fa-solid fa-arrow-left-long"></i></button>
+            <i class="fa-solid fa-arrow-left-long"></i>
         </div>
         <div class="arow_right">
-           <button><i class="fa-solid fa-arrow-right-long"></i></button> 
+           <i class="fa-solid fa-arrow-right-long"></i>
         </div>
         <div class="container">
             <div class="content">
